--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 CHANGES
 =======
 
+0.0.6
+-----
+
+* add some missing documentation, start to add prefixed env variables, mostly for CI use
+
 0.0.5
 -----
 
